test/cases/compile_errors/reify_type_for_exhaustive_enum_with_undefined_tag_type.zig
const Tag = @Type(.{
    .Enum = .{
        .tag_type = undefined,
        .fields = &.{},
        .decls = &.{},
        .is_exhaustive = false,
    },
});
export fn entry() void {
    _ = @enumFromInt(Tag, 0);
}

// error
// backend=stage2
// target=native
//
// :1:13: error: use of undefined value here causes undefined behavior
